# P21-API-MCP

./: .env.example  .gitignore  README.md  mcp-config.example.json  pyproject.toml
src/: __init__.py  docs_loader.py  prompts.py  resources.py  search.py  server.py  tools.py
tests/: __init__.py  test_server.py
